# python-env-benchmark

./: .gitignore  Makefile  Makefile.benchmark  README.md  UPDATED_README.md  evaluate_dx.py  generate_report.py  pyproject.toml  requirements.in  requirements.txt  run_benchmarks.sh  test_benchmark.py  test_reproducibility.py
.github/workflows/: benchmark.yml
benchmark_results/: hyperfine-results.json
benchmark_results/raw/: installation_benchmark_results_20250503_231822.json  reproducibility_results_20250503_230937.json
benchmark_results/report_20250503_231822/: report.md
scripts/: install_make.sh  install_piptools.sh  install_poetry.sh  install_uv.sh
